svn merge -r 14984:14987 https://source.sakaiproject.org/svn/web/trunk U    news-api/api/src/java/org/sakaiproject/news/cover/NewsService.java U    news-tool/tool/src/java/org/sakaiproject/news/tool/NewsAction.java U    news-impl/impl/src/java/org/sakaiproject/news/impl/BasicNewsService.java /Develop/maint_2-2-x/web_2-2-x$ svn log -r 14984:14987 https://source.sakaiproject.org/svn/web/trunk ------------------------------------------------------------------------ r14985 | joshua.ryan@asu.edu | 2006-09-20 05:25:55 -0400 (Wed, 20 Sep 2006) | 1 line
SAK-6460 :: clean up code of potential bugs based on reports generated from Alan Berg's automatic code review plus personal inspection
------------------------------------------------------------------------
r14987 | joshua.ryan@asu.edu | 2006-09-20 07:15:39 -0400 (Wed, 20 Sep 2006) | 1 line

SAK-6461 :: adding check and error messages for blank field entry for requried fields
------------------------------------------------------------------------



git-svn-id: https://source.sakaiproject.org/svn/web/branches/sakai_2-2-x@15499 66ffb92e-73f9-0310-93c1-f5514f145a0a